[gd_scene load_steps=12 format=3 uid="uid://dc2hmwd1w6g6w"]

[ext_resource type="Script" uid="uid://cmw6apskxnrnd" path="res://scripts/arma_script.gd" id="1_t1awj"]
[ext_resource type="Texture2D" uid="uid://dgjwxjqufplpl" path="res://assets/arma.png" id="1_tn6ss"]
[ext_resource type="AudioStream" uid="uid://bmtj20rmao2we" path="res://sounds/pistol-sonido.mp3" id="3_t1m4a"]
[ext_resource type="AudioStream" uid="uid://bfouuq74xv1sd" path="res://sounds/pistola-click-sonido(cut).mp3" id="4_50orj"]
[ext_resource type="AudioStream" uid="uid://d0hyrwfp1g1ur" path="res://sounds/carga-pistola-sonido.mp3" id="5_qieh0"]
[ext_resource type="AudioStream" uid="uid://dvatqcs2miasx" path="res://sounds/giro_tambor_arma_sonido(cut).mp3" id="6_qrbeq"]
[ext_resource type="AudioStream" uid="uid://bm75lp4mb5v8m" path="res://sounds/sonido-aturdidor.mp3" id="7_oqv4j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tn6ss"]
size = Vector2(593.333, 266.667)

[sub_resource type="Animation" id="Animation_oqv4j"]
resource_name = "disparo_anim"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.05, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.20944, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_x0yld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwtws"]
_data = {
&"RESET": SubResource("Animation_x0yld"),
&"disparo_anim": SubResource("Animation_oqv4j")
}

[node name="arma" type="Node2D"]
script = ExtResource("1_t1awj")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_tn6ss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_tn6ss")

[node name="sonido_disparo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t1m4a")
volume_db = -2.0

[node name="sonido_click_arma" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_50orj")

[node name="sonido_carga_arma" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qieh0")

[node name="sonido_giro_tambor_arma" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qrbeq")
volume_db = -3.0

[node name="sonido_aturdidor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_oqv4j")
volume_db = -15.0

[node name="anim_disparo" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gwtws")
}

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
